<?xml version="1.0"?>
<package format="2">
  <name>common_tools</name>
  <version>0.1.0</version>
  <description>The common_tools package</description>

  <maintainer email="rasteashish@gmail.com">Ashish Raste</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
